--- a/app/src/main/res/layout/wifi_direct.xml
+++ b/app/src/main/res/layout/wifi_direct.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
 	<RelativeLayout
@@ -29,7 +30,8 @@
 			android:text="Rechercher"
 			android:layout_alignParentTop="true"
 			android:layout_alignParentStart="true"
-			android:layout_margin="5dp" />
+			android:layout_margin="5dp"
+            tools:ignore="UsingOnClickInXml" />
 	</RelativeLayout>
 
 
